--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 				<button class="btn btn-warning mdl-button mdl-js-button mdl-button--raised" onclick="limpaResult()">
 				Clear results
 				</button>
+				<i class="material-icons">delete_forever</i>
+				<button class="btn btn-outline-dark mdl-button mdl-js-button mdl-button--raised" onclick="limpaTudo()">
+				Clear All
+				</button>
 			</div>
 		</form>
 	</div>
